welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: ')' expected but 'else' found.
	else if (noDoubles && die1 == dies2 && (b == 6) { b=1; return a+b }
        ^