welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
	if (noDoubles && die1 == dies2 && 6 != b && a != 6 )  return a+b+1
	else if (noDoubles && die1 == dies2 && (a == 6) { a=1; return a+b }
	else if (noDoubles && die1 == dies2 && (b == 6) { b=1; return a+b }
	
}
